# Humi

./: CMakeLists.txt  LICENSE  README.md  platformio.ini  refresh_resources.py
PCB/: Humi-B_Cu.gbr  Humi-B_Mask.gbr  Humi-B_Paste.gbr  Humi-B_Silkscreen.gbr  Humi-Edge_Cuts.gbr  Humi-F_Cu.gbr  Humi-F_Mask.gbr  Humi-F_Paste.gbr  Humi-F_Silkscreen.gbr  Humi.drl
pictures/: PCB.xcf
src/: App.cpp  App.hpp  ArduinoDevice.hpp  CFile.hpp  CFilesystem.hpp  CMessageEncoder.hpp  CMqttDevice.hpp  CMsgSerializer.hpp  CResources.hpp  CSerial.hpp  CUart.hpp  Configuration.hpp  FileAdp.hpp  FilesystemAdp.hpp  HumidifierUart.hpp  ISerial.hpp  Logger.cpp  Logger.hpp  MessageEncoder.cpp  MessageEncoder.hpp  Messages.hpp  MessagesSerializer.hpp  MqttAdp.cpp  MqttAdp.hpp  MqttHumidifier.hpp  Resources.cpp  Resources.hpp  Timer.hpp  Web.hpp  WebPage.hpp  WifiConfigurator.cpp  WifiConfigurator.hpp  main.cpp
src/WebServer/: CEventSrcClient.hpp  CWebRequest.hpp  CWebServer.hpp  EventSrcClient.hpp  IEventSrcClient.hpp  IWebRequest.hpp  IWebServer.hpp  WebRequest.cpp  WebRequest.hpp  WebServer.hpp
src/html/: index.html  main.js
unittests/mocks/: DeviceMock.hpp  EventSrcClientMock.hpp  ExampleMock.hpp  FileMock.hpp  FilesystemMock.hpp  MessageEncoderMock.hpp  MqttDeviceMock.hpp  MsgSerializerMock.hpp  ResourcesMock.hpp  SerialMock.hpp  WebRequestMock.hpp  WebServerMock.hpp
unittests/stubs/: Arduino.h
unittests/tests/: TestConfiguration.cpp  TestExample.cpp  TestHumidifierUart.cpp  TestMessageEncoder.cpp  TestMessages.cpp  TestMqttHumidifier.cpp  TestTimer.cpp  TestWebPage.cpp
